try to solve overflow with image styling

--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -8,9 +8,9 @@ body {
   background-color: #fafafa;
 }
 
-html, body {
-  overflow-x: hidden;
-}
+// html, body {
+//   overflow-x: hidden;
+// }
 
 .backgroundImage {
   min-height: 750px;
